Replace DCHECK with LOG(WARNING) in local_extension_cache.cc

This DCHECK was hit realiably in debug builds of Chrome OS:
[FATAL:local_extension_cache.cc(549)] Check failed: 0. Cache contains
newer or the same version

As the similar condition is checked upper in the stack trace with only
a warning message being logged, it's probably fine to leave only
emitting of the warning message here too.

This change still leaves the question of the code correctness opened -
probably, both places in this file should check against the same
condition, or perhaps the condition needs to be corrected.

BUG=614247

Review-Url: https://codereview.chromium.org/2662863003
Cr-Commit-Position: refs/heads/master@{#447375}

Former-commit-id: 56c67bc89312230d247e4c37622ab89751b60201